--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Vo Duc Toan - 21110689",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
     "express": "4.21.0",
+    "jsonwebtoken": "9.0.2",
     "mysql2": "3.11.2"
   },
   "devDependencies": {
